fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -738,6 +738,10 @@ textarea {
 	color: #252525;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.4em 0.6em 0.4em 0;
 	padding: 0;
